[FIX] Bug in IE7 that made the icon next each datetime box invisible.

--- a/addons/openerp/static/css/style-ie.css
+++ b/addons/openerp/static/css/style-ie.css
@@ -63,6 +63,10 @@ img{behavior:expression((this.runtimeStyle.behavior="none")&&(/^data:.*;base64/i
 	width: 120px;
 }
 
+.ie7 .item IMG.datetime {
+	margin-left: 0;
+}
+
 /**
  * vim: sts=4 st=4 et 
  *
